Updating index for Google site verification
Signed-off-by: Ethan <ethan.durham3692@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
   <!-- CSS will be injected by webpack here -->
   <!-- Preload link tags will be injected by webpack here -->
 
+  <meta name="google-site-verification" content="ef7ZA9ykPpVWAlZgwM3WSDciC9gq_34jhgsSZWe2RGg" />
+
 </head>
 
 <body>
